--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
 
-    <string name="app_name">QuizrrGame</string>
+    <string name="app_name">∞ Quiz</string>
 
-    <string name="APPID">sasd</string>
+    <string name="APPID">ca-app-pub-5847774043131331~7153873938</string>
     <string name="BANNERID">dsada</string>
-    <string name="INTERTITIAID">daffa</string>
+    <string name="INTERTITIAID">ca-app-pub-5847774043131331/6331746852</string>
 
 </resources>
